--- a/test/0-2DContactEstimationUKF.ipynb
+++ b/test/0-2DContactEstimationUKF.ipynb
@@ -1058,12 +1058,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fictitious control input : linear and angular vel"
+    "Fictitious measurement noise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,25 +1074,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(160,)"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.random import randn\n",
     "\n",
     "trajecotry_p = trajecotry_ + randn(160,) * z_std"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fictitious control input : linear and angular vel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
